deps/groove/groove/groove.h

struct GrooveTag;
struct GroovePlaylistItem {
    /// read-only
    struct GrooveFile *file;

    /// Read-only. A volume adjustment in float format to apply to the file when it plays.
    /// This is typically used for loudness compensation, for example ReplayGain.
    /// To convert from dB to float, use exp(log(10) * 0.05 * dB_value)
    /// Modify with ::groove_playlist_set_item_gain_peak
    double gain;

    /// Read-only. The sample peak of this playlist item is assumed to be 1.0 in float
    /// format. If you know for certain that the peak is less than 1.0, you
    /// may set this value which may allow the volume adjustment to use
    /// a pure amplifier rather than a compressor. This results in slightly
    /// better audio quality.
    /// Modify with ::groove_playlist_set_item_gain_peak
    double peak;

    /// A GroovePlaylist is a doubly linked list. Use these fields to
    /// traverse the list.
    /// See also ::groove_playlist_remove
    /// See also ::groove_playlist_insert
    struct GroovePlaylistItem *prev;
    struct GroovePlaylistItem *next;
};
struct GroovePlaylist {
    /// read-only. Head of the doubly linked list which is the playlist.
    /// See also ::groove_playlist_insert
    /// See also ::groove_playlist_remove
    struct GroovePlaylistItem *head;
    /// read-only. Tail of the doubly linked list which is the playlist.
    /// See also ::groove_playlist_insert
    /// See also ::groove_playlist_remove
    struct GroovePlaylistItem *tail;

    /// read-only. volume adjustment in float format which applies to all playlist items
    /// and all sinks. defaults to 1.0.
    /// Modify with ::groove_playlist_set_gain
    double gain;
};
/// use this to get access to a realtime raw audio buffer
/// for example you could use it to draw a waveform or other visualization
/// GroovePlayer uses this internally to get the audio buffer for playback
struct GrooveSink {
    /// Set the allowed sample rates buffers in this sink will have. You may
    /// leave this to the default `NULL` to allow any sample rate.
    /// If the source audio format does not match any of these sample rates,
    /// sample rate conversion will be performed to convert the sample rate to
    /// GrooveSink::default_sample_rate.
    /// See also ::groove_sink_set_only_format
    struct SoundIoSampleRateRange *sample_rates;
    /// See also ::groove_sink_set_only_format
    int sample_rate_count;
    /// If the source audio format does not match, sample rate conversion will
    /// be performed to convert the sample rate to this value.
    /// See also ::groove_sink_set_only_format
    int sample_rate_default;

    /// Set the allowed channel layouts buffers in this sink will have. You may
    /// leave this to the default `NULL` to allow any channel layouts.
    /// If the source channel layout does not match any of these channel
    /// layouts, the audio will be remapped to fit
    /// GrooveSink::channel_layout_default
    /// See also ::groove_sink_set_only_format
    struct SoundIoChannelLayout *channel_layouts;
    /// See also ::groove_sink_set_only_format
    int channel_layout_count;
    /// If the source channel layout does not match, audio will be remapped to
    /// fit this channel layout. This should point to one of
    /// GrooveSink::channel_layouts.
    /// See also ::groove_sink_set_only_format
    struct SoundIoChannelLayout channel_layout_default;

    /// Set the allowed sample formats buffers in this sink will have. You may
    /// leave this to the default `NULL` to allow any sample format.
    /// If the source sample format does not match any of these sample formats,
    /// sample format conversion will be performed to convert the sample format
    /// to GrooveSink::sample_format_default.
    /// See also ::groove_sink_set_only_format
    enum SoundIoFormat *sample_formats;
    /// See also ::groove_sink_set_only_format
    int sample_format_count;
    /// If the source sample format does not match, sample format conversion
    /// will be performed to convert the sample format to this.
    /// See also ::groove_sink_set_only_format
    enum SoundIoFormat sample_format_default;

    /// See #GrooveSinkFlags
    /// * If #GrooveSinkFlagPlanarOk is set, buffers in this sink may be planar.
    /// * If #GrooveSinkFlagInterleavedOk is set, buffers in this sink may be
    ///   interleaved.
    /// Leaving both of these flags unset is the same as having them both set.
    /// See also ::groove_sink_set_only_format
    uint32_t flags;

    /// If you leave this to its default of 0, frames pulled from the sink
    /// will have sample count determined by efficiency.
    /// If you set this to a positive number, frames pulled from the sink
    /// will always have this number of samples.
    int buffer_sample_count;

    /// ::groove_sink_create defaults this to 64KB
    int buffer_size_bytes;

    /// This volume adjustment only applies to this sink.
    /// It is recommended that you leave this at 1.0 and instead adjust the
    /// gain of the playlist.
    /// If you want to change this value after you have already attached the
    /// sink to the playlist, you must use ::groove_sink_set_gain.
    /// float format. Defaults to 1.0
    double gain;

    /// set to whatever you want, defaults to `NULL`.
    void *userdata;
    /// called when the audio queue is flushed. For example, if you seek to a
    /// different location in the song.
    void (*flush)(struct GrooveSink *);
    /// called when a playlist item is deleted. Take this opportunity to remove
    /// all your references to the GroovePlaylistItem.
    void (*purge)(struct GrooveSink *, struct GroovePlaylistItem *);
    /// called when the playlist is paused
    void (*pause)(struct GrooveSink *);
    /// called when the playlist is played
    void (*play)(struct GrooveSink *);
    /// Called when a buffer is put into the sink. This is called from a thread
    /// context in which it is undefined behavior to call any libgroove functions.
    void (*filled)(struct GrooveSink *);

    /// read-only. set when you call ::groove_sink_attach. cleared when you call
    /// ::groove_sink_detach
    struct GroovePlaylist *playlist;
};
GROOVE_EXPORT const char *groove_tag_key(struct GrooveTag *tag);
GROOVE_EXPORT const char *groove_tag_value(struct GrooveTag *tag);