src/server/groove.zig


        /// See the gain property of GrooveSink. It is recommended that you leave this
        /// at 1.0 and instead adjust the gain of the playlist.
        /// returns 0 on success, < 0 on error
        pub const set_gain = groove_encoder_set_gain;
        extern fn groove_encoder_set_gain(encoder: *Encoder, gain: f64) CError;
    };

    pub const Tag = opaque {
        pub const key = groove_tag_key;
        extern fn groove_tag_key(tag: *Tag) [*:0]const u8;

        pub const value = groove_tag_value;
        pub extern fn groove_tag_value(tag: *Tag) [*:0]const u8;
    };

    pub const Buffer = extern struct {
        /// read-only.
        /// * for interleaved audio, data[0] is the buffer.
        /// * for planar audio, each channel has a separate data pointer.
        /// * for encoded audio, data[0] is the encoded buffer.
        data: [*][*]u8,

        /// read-only
        format: AudioFormat,

        /// read-only
        /// number of audio frames described by this buffer
        /// for encoded audio, this is unknown and set to 0.
        frame_count: c_int,

        /// read-only
        /// when encoding, if item is NULL, this is a format header or trailer.
        /// otherwise, this is encoded audio for the item specified.
        /// when decoding, item is never NULL.
        item: *Playlist.Item,
        /// read-only
        pos: f64,

        /// read-only
        /// total number of bytes contained in this buffer
        size: c_int,

        /// read-only
        /// presentation time stamp of the buffer
        pts: u64,
    };

    pub const CustomIo = opaque {};

    pub const AudioFormat = extern struct {
        sample_rate: c_int,
        layout: SoundIo.ChannelLayout,
        format: SoundIo.Format,
        /// 0 - nonplanar, otherwise planar
        is_planar: c_int,
    };
};

pub const SoundIo = opaque {
    pub const ChannelLayout = extern struct {
        name: [*:0]const u8,
        channel_count: c_int,
        channels: [24]ChannelId,
    };

    pub const ChannelId = enum(c_int) {
        Invalid = 0,
        FrontLeft = 1,
        FrontRight = 2,
        FrontCenter = 3,
        Lfe = 4,
        BackLeft = 5,
        BackRight = 6,
        FrontLeftCenter = 7,
        FrontRightCenter = 8,
        BackCenter = 9,
        SideLeft = 10,
        SideRight = 11,
        TopCenter = 12,
        TopFrontLeft = 13,
        TopFrontCenter = 14,
        TopFrontRight = 15,
        TopBackLeft = 16,
        TopBackCenter = 17,
        TopBackRight = 18,
        BackLeftCenter = 19,
        BackRightCenter = 20,
        FrontLeftWide = 21,
        FrontRightWide = 22,
        FrontLeftHigh = 23,
        FrontCenterHigh = 24,
        FrontRightHigh = 25,
        TopFrontLeftCenter = 26,
        TopFrontRightCenter = 27,
        TopSideLeft = 28,
        TopSideRight = 29,
        LeftLfe = 30,
        RightLfe = 31,
        Lfe2 = 32,
        BottomCenter = 33,
        BottomLeftCenter = 34,
        BottomRightCenter = 35,
        MsMid = 36,
        MsSide = 37,
        AmbisonicW = 38,
        AmbisonicX = 39,
        AmbisonicY = 40,
        AmbisonicZ = 41,
        XyX = 42,
        XyY = 43,
        HeadphonesLeft = 44,
        HeadphonesRight = 45,
        ClickTrack = 46,
        ForeignLanguage = 47,
        HearingImpaired = 48,
        Narration = 49,
        Haptic = 50,
        DialogCentricMix = 51,
        Aux = 52,
        Aux0 = 53,
        Aux1 = 54,
        Aux2 = 55,
        Aux3 = 56,
        Aux4 = 57,
        Aux5 = 58,
        Aux6 = 59,
        Aux7 = 60,
        Aux8 = 61,
        Aux9 = 62,
        Aux10 = 63,
        Aux11 = 64,
        Aux12 = 65,
        Aux13 = 66,
        Aux14 = 67,
        Aux15 = 68,
    };

    pub const Format = enum(c_int) {
        Invalid = 0,
        S8 = 1,
        U8 = 2,
        S16LE = 3,
        S16BE = 4,
        U16LE = 5,
        U16BE = 6,
        S24LE = 7,
        S24BE = 8,
        U24LE = 9,
        U24BE = 10,
        S32LE = 11,
        S32BE = 12,
        U32LE = 13,
        U32BE = 14,
        Float32LE = 15,
        Float32BE = 16,
        Float64LE = 17,
        Float64BE = 18,
    };
};
